--- a/ME422_Vibration_LAB_CRS.ipynb
+++ b/ME422_Vibration_LAB_CRS.ipynb
@@ -168,6 +168,92 @@
         "\\Omega = \\begin{bmatrix} \\omega_{n1}^2 & -\\omega_{n1}^2 & 0 & 0 \\\\ -\\mu_1 \\omega_{n1}^2 & (\\mu_1 \\omega_{n1}^2+\\omega_{n2}^2) & -\\omega_{n2}^2 & 0 \\\\ 0 & -\\mu_2 \\omega_{n2}^2 & (\\mu_2 \\omega_{n2}^2+\\omega_{n3}^2) & -\\omega_{n3}^2 \\\\ 0 & 0 & -\\mu_3 \\omega_{n3}^2 & (\\mu_3 \\omega_{n3}^2+\\omega_{n4}^2) \\end{bmatrix}\n",
         "\\end{align}"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#Setup"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "from scipy.integrate import solve_ivp\n",
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib.animation import FuncAnimation\n",
+        "from matplotlib import animation\n",
+        "\n",
+        "from IPython.display import HTML\n",
+        "from matplotlib import rc\n",
+        "rc('animation', html='html5')"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#Natural frequency"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "#Defining variables\n",
+        "I1 = 1.0\n",
+        "I2 = 1.0\n",
+        "I3 = 1.0\n",
+        "I4 = 1.0\n",
+        "k1 = 1.0\n",
+        "k2 = 1.0\n",
+        "k3 = 1.0\n",
+        "k4 = 1.0\n",
+        "#f = lambda t: np.sin(2 * np.pi * t)\n",
+        "f=1\n",
+        "w = 0.34729635533386055\n",
+        "\n",
+        "K= np.array([[k1,-k1,0,0],[-k1,(k1+k2),-k2,0],[0,-k2,(k2+k3),-k3],[0,0,-k3,(k3+k4)]])\n",
+        "I= np.array([[I1,0,0,0],[0,I2,0,0],[0,0,I3,0],[0,0,0,I4]])\n",
+        "T= np.array([[f],[0],[0],[0]])\n",
+        "\n",
+        "I_inv = np.linalg.inv(I)\n",
+        "Omega = I_inv @ K\n",
+        "eigvals= np.linalg.eigvals(Omega)\n",
+        "\n",
+        "Natfreq = np.sqrt(eigvals)\n",
+        "print(\"Natural frequency 1 = \", Natfreq[0])\n",
+        "print(\"Natural frequency 2 = \", Natfreq[1])\n",
+        "print(\"Natural frequency 3 = \", Natfreq[2])\n",
+        "print(\"Natural frequency 4 = \", Natfreq[3])"
+      ]
     }
   ],
   "metadata": {
