--- a/ME422_Vibration_LAB_CRS.ipynb
+++ b/ME422_Vibration_LAB_CRS.ipynb
@@ -170,17 +170,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
-        }
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
@@ -253,6 +242,62 @@
         "print(\"Natural frequency 2 = \", Natfreq[1])\n",
         "print(\"Natural frequency 3 = \", Natfreq[2])\n",
         "print(\"Natural frequency 4 = \", Natfreq[3])"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#Simulation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "# Define the differential equations\n",
+        "def system(t, y):\n",
+        "    dydt = np.zeros_like(y)\n",
+        "    dydt[0] = y[1]\n",
+        "    dydt[1] = (f(t) - k1*y[0] + k1*y[2]) / I1\n",
+        "    dydt[2] = y[3]\n",
+        "    dydt[3] = (k1*y[0] - (k1+k2)*y[2] + k2*y[4]) / I2\n",
+        "    dydt[4] = y[5]\n",
+        "    dydt[5] = (k2*y[2] - (k2+k3)*y[4] + k3*y[6]) / I3\n",
+        "    dydt[6] = y[7]\n",
+        "    dydt[7] = (k3*y[4] - (k3+k4)*y[6]) / I4\n",
+        "    return dydt\n",
+        "\n",
+        "# Define the force function\n",
+        "def f(t):\n",
+        "    # Define a constant force\n",
+        "    return 0.2*np.sin(w*t)\n",
+        "\n",
+        "# Define the initial conditions\n",
+        "y0 = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+        "\n",
+        "# Define the time span\n",
+        "t_span = [0.0, 20.0]\n",
+        "\n",
+        "# Solve the system using Scipy ODE solver\n",
+        "sol = solve_ivp(system, t_span, y0, t_eval=np.linspace(t_span[0], t_span[1], 1000), method='RK45')\n",
+        "\n",
+        "# Plot the solutions\n",
+        "plt.plot(sol.t, sol.y[0,:], label=\"Theta1\")\n",
+        "plt.plot(sol.t, sol.y[2,:], label=\"Theta2\")\n",
+        "plt.plot(sol.t, sol.y[4,:], label=\"Theta3\")\n",
+        "plt.plot(sol.t, sol.y[6,:], label=\"Theta4\")\n",
+        "plt.xlabel(\"Time\")\n",
+        "plt.ylabel(\"Rotation\")\n",
+        "plt.legend()\n",
+        "plt.show()"
       ]
     }
   ],
