--- a/ME422_Vibration_LAB_CRS.ipynb
+++ b/ME422_Vibration_LAB_CRS.ipynb
@@ -218,15 +218,15 @@
       "source": [
         "#Defining variables\n",
         "I1 = 1.0\n",
-        "I2 = 1.0\n",
-        "I3 = 1.0\n",
-        "I4 = 1.0\n",
-        "k1 = 1.0\n",
-        "k2 = 1.0\n",
-        "k3 = 1.0\n",
-        "k4 = 1.0\n",
-        "#f = lambda t: np.sin(2 * np.pi * t)\n",
-        "f=1\n",
+        "I2 = 2.0\n",
+        "I3 = 3.0\n",
+        "I4 = 4.0\n",
+        "k1 = 0.1\n",
+        "k2 = 0.2\n",
+        "k3 = 0.3\n",
+        "k4 = 0.4\n",
+        "f = lambda t: np.sin(2 * np.pi * t)\n",
+        "#f=1\n",
         "w = 0.34729635533386055\n",
         "\n",
         "K= np.array([[k1,-k1,0,0],[-k1,(k1+k2),-k2,0],[0,-k2,(k2+k3),-k3],[0,0,-k3,(k3+k4)]])\n",
@@ -262,18 +262,17 @@
       },
       "outputs": [],
       "source": [
+        "#frequency of the sytem\n",
+        "w = 0.4365752024265626\n",
+        "\n",
         "# Define the differential equations\n",
-        "def system(t, y):\n",
-        "    dydt = np.zeros_like(y)\n",
-        "    dydt[0] = y[1]\n",
-        "    dydt[1] = (f(t) - k1*y[0] + k1*y[2]) / I1\n",
-        "    dydt[2] = y[3]\n",
-        "    dydt[3] = (k1*y[0] - (k1+k2)*y[2] + k2*y[4]) / I2\n",
-        "    dydt[4] = y[5]\n",
-        "    dydt[5] = (k2*y[2] - (k2+k3)*y[4] + k3*y[6]) / I3\n",
-        "    dydt[6] = y[7]\n",
-        "    dydt[7] = (k3*y[4] - (k3+k4)*y[6]) / I4\n",
-        "    return dydt\n",
+        "def derivatives(t, y):\n",
+        "    theta1, theta2, theta3, theta4, theta1_dot, theta2_dot, theta3_dot, theta4_dot = y\n",
+        "    theta1_ddot = (1/I1) * (f(t) - k1*theta1 + k1*theta2)\n",
+        "    theta2_ddot = (1/I2) * (k1*theta1 - (k1+k2)*theta2 + k2*theta3)\n",
+        "    theta3_ddot = (1/I3) * (k2*theta2 - (k2+k3)*theta3 + k3*theta4)\n",
+        "    theta4_ddot = (1/I4) * (k3*theta3 - (k3+k4)*theta4)\n",
+        "    return [theta1_dot, theta2_dot, theta3_dot, theta4_dot, theta1_ddot, theta2_ddot, theta3_ddot, theta4_ddot]\n",
         "\n",
         "# Define the force function\n",
         "def f(t):\n",
