--- a/ME422_Vibration_LAB_CRS.ipynb
+++ b/ME422_Vibration_LAB_CRS.ipynb
@@ -187,9 +187,27 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
+        "iimport numpy as np\n",
         "from scipy.integrate import solve_ivp\n",
         "import matplotlib.pyplot as plt\n",
+        "import math\n",
+        "from numpy import linalg\n",
+        "import sympy\n",
+        "\n",
+        "from sympy import symbols\n",
+        "from sympy import *\n",
+        "\n",
+        "import plotly.graph_objects as go\n",
+        "import plotly.express as px\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "import plotly.graph_objs as go\n",
+        "from plotly.subplots import make_subplots\n",
+        "\n",
+        "import plotly.graph_objs as go\n",
+        "from plotly.subplots import make_subplots\n",
+        "import plotly.graph_objs as go\n",
+        "from plotly.subplots import make_subplots\n",
         "from matplotlib.animation import FuncAnimation\n",
         "from matplotlib import animation\n",
         "\n",
