--- a/ME422_Vibration_LAB_CRS.ipynb
+++ b/ME422_Vibration_LAB_CRS.ipynb
@@ -316,6 +316,66 @@
         "plt.legend()\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "t1_pos = sol.y[0,:]\n",
+        "t2_pos = sol.y[1,:]\n",
+        "t3_pos = sol.y[2,:]\n",
+        "t4_pos = sol.y[3,:]\n",
+        "\n",
+        "t_span = sol.t\n",
+        "\n",
+        "# Define the initialization function\n",
+        "def init():\n",
+        "    line1.set_data([], [])\n",
+        "    line2.set_data([], [])\n",
+        "    line3.set_data([], [])\n",
+        "    line4.set_data([], [])\n",
+        "    return line1, line2,line3,line4\n",
+        "\n",
+        "# Set up the plot\n",
+        "fig, ax = plt.subplots(figsize=(8,6))\n",
+        "ax.set_xlim(-5, 5)\n",
+        "ax.set_ylim(-3, 3)\n",
+        "# Initialize the line objects\n",
+        "line1, = ax.plot([], [], 'bo', markersize=40)\n",
+        "line2, = ax.plot([], [], 'yo', markersize=30)\n",
+        "line3, = ax.plot([], [], 'go', markersize=20)\n",
+        "line4, = ax.plot([], [], 'ro', markersize=10)\n",
+        "\n",
+        "# Define the initialization function\n",
+        "def init():\n",
+        "    line1.set_data([], [])\n",
+        "    line2.set_data([], [])\n",
+        "    line3.set_data([], [])\n",
+        "    line4.set_data([], [])\n",
+        "    return line1, line2,line3,line4\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Define the animation function\n",
+        "def animate(i):\n",
+        "    line1.set_data(t1_pos[i], 0)\n",
+        "    line2.set_data(t2_pos[i], 0)\n",
+        "    line3.set_data(t3_pos[i], 0)\n",
+        "    line4.set_data(t4_pos[i], 0)\n",
+        "    return line1, line2,line3,line4\n",
+        "\n",
+        "# Create the animation\n",
+        "anim = FuncAnimation(fig, animate, init_func=init, frames=len(t_span), interval=10, blit=True)\n",
+        "\n",
+        "# Show the animation\n",
+        "anim"
+      ]
     }
   ],
   "metadata": {
