--- a/mechanics/assignments/Group_Kalman_CRS_ControlSystems_Lab.ipynb
+++ b/mechanics/assignments/Group_Kalman_CRS_ControlSystems_Lab.ipynb
@@ -387,7 +387,7 @@
         "id": "WU-8G8UvHEnu",
         "outputId": "0efb2f88-44db-447c-a264-c7cce7b609e6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -444,6 +444,122 @@
       "metadata": {
         "id": "cInu25giFEXw"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Define the system of equations\n",
+        "def equations(t, y, *args):\n",
+        "    R, o = y\n",
+        "    M, Ic_R, attitude_control = args\n",
+        "\n",
+        "    p = M * o\n",
+        "    R_dot = np.cross(o, R)\n",
+        "    fe, tau_e = attitude_control(t, y)  # Call the attitude_control function\n",
+        "    p_dot = fe - np.cross(o, p)\n",
+        "    o_dot = np.linalg.inv(Ic_R) @ (tau_e - np.cross(o, Ic_R @ o))\n",
+        "\n",
+        "    return [R_dot, o_dot]\n",
+        "\n",
+        "# Attitude control function\n",
+        "def attitude_control(t, y):\n",
+        "    R_desired = np.array([[1.0, 0.0, 0.0],\n",
+        "                          [0.0, 1.0, 0.0],\n",
+        "                          [0.0, 0.0, 1.0]])  # Desired rotation matrix\n",
+        "\n",
+        "    R, o = y\n",
+        "\n",
+        "    error_R = 0.5 * (R_desired @ R.T - R.T @ R_desired)  # Attitude error\n",
+        "    error_o = o - np.zeros(3)  # Angular velocity error\n",
+        "\n",
+        "    Kp = np.array([[1.0, 0.0, 0.0],\n",
+        "                   [0.0, 1.0, 0.0],\n",
+        "                   [0.0, 0.0, 1.0]])  # Proportional gain matrix\n",
+        "    Kd = np.array([[1.0, 0.0, 0.0],\n",
+        "                   [0.0, 1.0, 0.0],\n",
+        "                   [0.0, 0.0, 1.0]])  # Derivative gain matrix\n",
+        "\n",
+        "    fe = Kp @ error_R.flatten()  # Proportional term\n",
+        "    tau_e = Kd @ error_o  # Derivative term\n",
+        "\n",
+        "    return fe, tau_e\n",
+        "\n",
+        "# Runge-Kutta 4th order method\n",
+        "def runge_kutta(f, t0, y0, h, num_steps, *args):\n",
+        "    t_values = [t0]\n",
+        "    y_values = [y0]\n",
+        "\n",
+        "    for _ in range(num_steps):\n",
+        "        tn = t_values[-1]\n",
+        "        yn = y_values[-1]\n",
+        "\n",
+        "        k1 = h * np.array(f(tn, yn, *args))\n",
+        "        k2 = h * np.array(f(tn + h/2, yn + k1/2, *args))\n",
+        "        k3 = h * np.array(f(tn + h/2, yn + k2/2, *args))\n",
+        "        k4 = h * np.array(f(tn + h, yn + k3, *args))\n",
+        "\n",
+        "        yn_1 = yn + (k1 + 2*k2 + 2*k3 + k4)/6\n",
+        "        tn_1 = tn + h\n",
+        "\n",
+        "        t_values.append(tn_1)\n",
+        "        y_values.append(yn_1)\n",
+        "\n",
+        "    return t_values, y_values\n",
+        "\n",
+        "# Define the given values\n",
+        "M = 1.0  # Total mass of the body\n",
+        "Ic_R = np.array([[1.0, 0.0, 0.0],\n",
+        "                 [0.0, 1.0, 0.0],\n",
+        "                 [0.0, 0.0, 1.0]])  # Inertia tensor with respect to body frame b\n",
+        "\n",
+        "# Define the initial conditions\n",
+        "R0 = np.array([1.0, 1.0, 1.0])  # Initial R\n",
+        "o0 = np.array([0.0, 0.0, 1.0])  # Initial o\n",
+        "\n",
+        "# Set the time step size and number of steps\n",
+        "h = 1\n",
+        "num_steps = 1000\n",
+        "\n",
+        "# Solve the system of equations using the Runge-Kutta method with attitude control\n",
+        "t_values, y_values = runge_kutta(equations, 0.0, [R0, o0], h, num_steps, M, Ic_R, attitude_control)\n",
+        "\n",
+        "# Convert the lists to NumPy arrays\n",
+        "t_values = np.array(t_values)\n",
+        "y_values = np.array(y_values)\n",
+        "\n",
+        "# Extract the R and o values\n",
+        "R_values = y_values[:, 0, :]\n",
+        "o_values = y_values[:, 1, :]\n",
+        "\n",
+        "# Plot the solutions for R and o against time\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "plt.plot(t_values, R_values[:, 0], label='R1')\n",
+        "plt.plot(t_values, R_values[:, 1], label='R2')\n",
+        "plt.plot(t_values, R_values[:, 2], label='R3')\n",
+        "plt.xlabel('Time')\n",
+        "plt.ylabel('R')\n",
+        "plt.title('Rotation Matrix R')\n",
+        "plt.legend()\n",
+        "plt.show()\n",
+        "\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "plt.plot(t_values, o_values[:, 0], label='o1')\n",
+        "plt.plot(t_values, o_values[:, 1], label='o2')\n",
+        "plt.plot(t_values, o_values[:, 2], label='o3')\n",
+        "plt.xlabel('Time')\n",
+        "plt.ylabel('o')\n",
+        "plt.title('Angular Velocity Vector o')\n",
+        "plt.legend()\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "oBXTx6dF5y75"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
