--- a/mechanics/assignments/Group_Kalman_CRS_ControlSystems_Lab.ipynb
+++ b/mechanics/assignments/Group_Kalman_CRS_ControlSystems_Lab.ipynb
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "jyRVnGduCaQY"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "PKluE2ecCpgU"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +414,7 @@
       "metadata": {
         "id": "CfJEJ0dsCrY-"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -727,7 +727,7 @@
         "id": "WU-8G8UvHEnu",
         "outputId": "fd9d9c5b-fe88-4ffb-ccef-8575954f0da3"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -761,7 +761,7 @@
       "metadata": {
         "id": "gfCw03S4CPSe"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -848,7 +848,7 @@
       "metadata": {
         "id": "OhCbzXqhC42I"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -864,7 +864,7 @@
       "metadata": {
         "id": "bzbRHtfUDS7I"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -881,7 +881,7 @@
           "height": 617
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -958,6 +958,209 @@
       ],
       "metadata": {
         "id": "cInu25giFEXw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Answer"
+      ],
+      "metadata": {
+        "id": "ndSx2H7lTqu4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The general rigid body equations in the $\\mathbf{e}$ frame is given by,\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\dot{o}&=\\frac{1}{M}p\\\\\n",
+        "\\dot{R}&=\\widehat{\\omega}R,\\\\\n",
+        "\\dot{p}&=f^e+f^u,\\\\\n",
+        "\\dot{\\pi}&=\\tau^e+\\tau^u,\n",
+        "\\end{align}\n",
+        "where\n",
+        "\\begin{align}\n",
+        "\\omega &=(\\mathbb{I}_c^R)^{-1}\\pi,\n",
+        "\\end{align}\n",
+        "\n",
+        "Where,\n",
+        "\n",
+        "  $M$ : total mass of the body\n",
+        "\n",
+        "  $\\mathbb{I}$ : the inertia tensor of the body with respect to the body frame \\mathbf{b}\n",
+        "\n",
+        "  $f^e$ : the resultant total external interactions acting on the particles of the body\n",
+        "\n",
+        "  $\\tau^e$ : the total resultant of the moments of the external interactions about the center of mass of the body"
+      ],
+      "metadata": {
+        "id": "95kJ4zDrTs_B"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "we have to focus on the aympotic tracking of a sufficiently smooth trajectory $(o(t),R_r(t))$ in $\\mathbb{R}^3 × SO(3)$\n",
+        "\n",
+        "For the fully actuated system, a PID control is required since the momentum equations are linear.\n",
+        "\n",
+        "The configuration error and the integral term should be described as spatial frame momentum quantities as the equations of motion are specified in the spatial momentum space.\n"
+      ],
+      "metadata": {
+        "id": "gEyNGTqrTwOR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Configuration Error"
+      ],
+      "metadata": {
+        "id": "av9GIM96T29Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$(o(t),R_r(t))$ in $\\mathbb{R}^3 × SO(3)$ is a group which is closed under multiplication operation which is defined as follows\n",
+        "\n",
+        "For $(a_1, R_1), (a_2, R_2) \\in \\mathbb{R}^3 × SO(3)$,\n",
+        "$(a_1, R_1) ⋅ (a_2, R_2) \\triangleq ((a_1 - a_2),R_1R_2)$\n",
+        "\n",
+        "inverse of it is unique and it is as follows\n",
+        "\n",
+        "$(a_1, R_1)^{-1} \\triangleq (- a_1),R_1^{-1})$\n",
+        "\n",
+        "error between the system, with configuration  $(o,R) \\in \\mathbb{R}^3 × SO(3)$ and the reference configuration $(o_r,R_r) \\in \\mathbb{R}^3 × SO(3)$ is defined as follows\n",
+        "\n",
+        "$(o_e, R_e) \\triangleq ((o_r - o),R^{-1}R_r) \\in \\mathbb{R}^3 × SO(3)$\n",
+        "\n",
+        "or\n",
+        "\n",
+        "$(o_e, R_e) \\triangleq ((o_r - o),R_rR^{-1}) \\in \\mathbb{R}^3 × SO(3)$\n",
+        "\n",
+        "Through the earlier derivations, the left invariant and the right invariant are defined.\n"
+      ],
+      "metadata": {
+        "id": "OTXS1l3HT6RQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Tracking error dynamics"
+      ],
+      "metadata": {
+        "id": "Qtc4K97DT9Bo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let $(o(t),R_r(t))$ be a desired trajectory and $\\omega_r(t)$ be such that $\\widehat{\\omega}_r(t)=\\dot{R}_rR_r^T$.\n",
+        "The refernce spatial linear momentum is $p_r\\triangleq M\\dot{o_r}$ and the spatial angular momentum is $\\pi_r\\triangleq R_r\\mathbb{I}R_r^T\\omega_r$\n",
+        "\n",
+        "The configurarion error is defined as,\n",
+        "\\begin{align}\n",
+        "o_e&=o_r-o,\\\\\n",
+        "R_e&=R_rR^T.\n",
+        "\\end{align}\n",
+        "\n",
+        "The tracking error's spatial angular velcity can be determined by\n",
+        "\\begin{align}\n",
+        "\\widehat{\\omega}_e&\\triangleq \\dot{R}_eR_e^T=\\widehat{\\omega}_r(t)-R_e\\widehat{\\omega}(t)R_e^T\n",
+        "\\end{align}\n",
+        "\\begin{align}\n",
+        "\\omega_e&=\\omega_r-R_e\\omega.\n",
+        "\\end{align}\n",
+        "\n",
+        "The angular momentum error is defined as,\n",
+        "\\begin{align}\n",
+        "\\pi_e\\triangleq R\\mathbb{I}R_r^T\\omega_e=R\\mathbb{I}R_r^T(\\omega_r-R_e\\omega)=R\\mathbb{I}R_r^T\\omega_r-R\\mathbb{I}R^T\\omega=R_e^T\\pi_r-\\pi.\n",
+        "\\end{align}\n",
+        "\n",
+        "similar way linear momentum error is defined as\n",
+        "\n",
+        "$p_e\\triangleq p_r-p$.\n",
+        "\n",
+        "Differentiating $\\pi_e$ we have,\n",
+        "\\begin{align}\n",
+        "\\dot{\\pi}_e&=R_e^T(\\dot{\\pi}_r-\\omega_e\\times \\pi_r)-\\dot{\\pi}=R_e^T(R_r\\dot{\\Pi}_r+(\\omega_r-\\omega_e)\\times \\pi_r)-\\dot{\\pi}=(R\\dot{\\Pi}_r+\\omega\\times \\pi_r)-\\dot{\\pi}\n",
+        "\\end{align}\n",
+        "\n",
+        "Therefore the error dynamics can be written as,\n",
+        "\\begin{align}\n",
+        "\\dot{o}_e&=\\frac{1}{M}p_e,\\\\\n",
+        "\\dot{R}_e&=\\widehat{\\omega}_eR_e,\\\\\n",
+        "\\dot{p}_e&=M\\ddot{o}_r-f^e-f^u,\\\\\n",
+        "\\dot{\\pi}_e&=(R\\dot{\\Pi}_r+\\omega\\times \\pi_r)-\\tau^e-\\tau^u\n",
+        "\\end{align}\n"
+      ],
+      "metadata": {
+        "id": "fGev19g_UAAw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### The Feedforward and the PID is given by,"
+      ],
+      "metadata": {
+        "id": "LtEb7nE0UITQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\\begin{align}\n",
+        "\\dot{e}_{I_o}&=e_o,\\\\\n",
+        "f^u&=M\\ddot{o}_r+k_{P_o}e_o+k_{D_o}p_e+k_{I_o}e_{I_o}\\\\\n",
+        "\\dot{e}_{I_R}&=e_R,\\\\\n",
+        "\\tau^u&=(R\\dot{\\Pi}_r+\\omega\\times \\pi_r)-\\tau^e+k_{P_R}e_R+k_{D_R}\\pi_e+k_{I_R}e_{I_R}\n",
+        "\\end{align}"
+      ],
+      "metadata": {
+        "id": "1qBX4Vb8Uk7R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Controlled error dynamics"
+      ],
+      "metadata": {
+        "id": "YWWGO2eIUo2K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\\begin{align}\n",
+        "\\dot{e}_{I_o}&=e_o,\\\\\n",
+        "\\dot{o}_e&=\\frac{1}{M}p_e,\\\\\n",
+        "\\dot{p}_e&=-k_{P_o}e_o-k_{D_o}p_e-k_{I_o}e_{I_o},\\\\\n",
+        "\\dot{e}_{I_R}&=e_R,\\\\\n",
+        "\\dot{R}_e&=\\widehat{\\omega}_eR_e,\\\\\n",
+        "\\dot{\\pi}_e&=-k_{P_R}e_R-k_{D_R}\\pi_e-k_{I_R}e_{I_R}\n",
+        "\\end{align}\n",
+        "\n",
+        "Here \\begin{align}\n",
+        "o_e&=o_r-o,\\\\\n",
+        "R_e&=R_rR^T.\n",
+        "\\end{align}\n",
+        "$\\widehat{\\omega}_r(t)=\\dot{R}_rR_r^T$, $p_r\\triangleq M\\dot{o_r}$, $\\pi_r\\triangleq R_r\\mathbb{I}R_r^T\\omega_r$\n",
+        "\\begin{align}\n",
+        "\\omega_e&=\\omega_r-R_e\\omega,\n",
+        "\\end{align}\n",
+        "\\begin{align}\n",
+        "\\pi_e\\triangleq R\\mathbb{I}R_r^T\\omega_e,\n",
+        "\\end{align}\n",
+        "and $p_e\\triangleq p_r-p$."
+      ],
+      "metadata": {
+        "id": "4Xn9-IlEUqXY"
       }
     },
     {
