--- a/mechanics/assignments/Group_Kalman_CRS_ControlSystems_Lab.ipynb
+++ b/mechanics/assignments/Group_Kalman_CRS_ControlSystems_Lab.ipynb
@@ -1494,6 +1494,91 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def referenceConfig(qq,refParameters,t):\n",
+        "  II=refParameters;\n",
+        "  dotOmegart=np.array([0,.01,0]);\n",
+        "  dotPir=II@dotOmegart;\n",
+        "  Omegart=np.array([0,0,0])+dotOmegart*t;\n",
+        "  Pir=II@Omegart;\n",
+        "  thetaOmegart=linalg.norm(Omegart)*t+0*np.pi;\n",
+        "  nOmegart=Omegart/(0.000001+linalg.norm(Omegart));\n",
+        "  qOmegart=np.concatenate(([np.cos(thetaOmegart/2)],np.sin(thetaOmegart/2)*nOmegart));\n",
+        "  Rr=qq.RfromQuaternions(qOmegart);\n",
+        "  return [Rr,Pir,dotPir]\n",
+        "\n",
+        "def controller(qq,parameters,t,X,taue,fe):\n",
+        "  #Fully Actuated PD Controller\n",
+        "  II=parameters['II'];\n",
+        "  R=X[0][0]; omega=X[1]; piI=X[3];\n",
+        "  [Rr,Pir,dotPir]=referenceConfig(qq,II,t);\n",
+        "  pir=Rr@Pir;\n",
+        "  omegar=Rr@linalg.inv(II)@Pir;\n",
+        "  Re=Rr@R.T;\n",
+        "  pie=R @ II @ Rr.T @ (omegar-Re@omega);\n",
+        "  K=np.array([[1,0,0],[0,2,0],[0,0,3]]);\n",
+        "  eRhat=0.5*(Re@K-K@Re.T);\n",
+        "  eR=np.array([-eRhat[1,2],eRhat[0,2],-eRhat[0,1]]);\n",
+        "  tauu=(R@dotPir+qq.hatMatrix(omega)@pir)-0.*taue+(4*eR+10*pie+2.*piI)\n",
+        "  fu=-fe+np.array([0,0,0]);\n",
+        "  return [tauu,fu,eR,pie]\n",
+        "\n",
+        "def controller_dynamics(qq, t,X,taue,fe,parameters):\n",
+        "  Xc=X[3];\n",
+        "  Uc=controller(qq,parameters,t,X,taue,fe);\n",
+        "  eR=Uc[2];\n",
+        "  dXc=eR;\n",
+        "  #print(eR)\n",
+        "  return dXc\n",
+        "\n",
+        "\n",
+        "def Sol_R (t1, t2, t3):\n",
+        "\n",
+        "  R1    = np.array([[1,0,0],[0,np.cos(t1),-np.sin(t1)],[0,np.sin(t1),np.cos(t1)]])\n",
+        "  R2    = np.array([[np.cos(t2),0,np.sin(t2)],[0,1,0],[-np.sin(t2),0,np.cos(t2)]])\n",
+        "  R3    = np.array([[np.cos(t3),-np.sin(t3),0],[np.sin(t3),np.cos(t3),0],[0,0,1]])\n",
+        "\n",
+        "  R_t= R1@R2\n",
+        "  R  = R_t@R3\n",
+        "\n",
+        "  return R"
+      ],
+      "metadata": {
+        "id": "YsOo0Fi3XK5W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cubeDimensions={'l':4.,'w':4.,'h':0.5,'xp':2.,'yp':2.,'zp':0.25,};\n",
+        "parameters={'CM':np.array([cubeDimensions['l']/2-cubeDimensions['xp'],cubeDimensions['w']/2-cubeDimensions['yp'],cubeDimensions['h']/2-cubeDimensions['zp']]), 'g':1, 'M':1, 'II':np.array([[1.,0.,0.],[0.,1.,0.],[0.,0.,1.]])};\n",
+        "ICR = Sol_R(np.pi/3,np.pi/3,0)\n",
+        "ICOmega=np.array([0.,0.,0.]); ICo=np.array([0.,0.,0.]); ICp=np.array([0.,0.,0.]);\n",
+        "ICXC=np.array([0,0,0]);\n",
+        "ICs=[[ICR,ICo],ICOmega,ICp,ICXC]"
+      ],
+      "metadata": {
+        "id": "L-oKYTwvXS6V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Sim_Q=mr.simulating_a_cube(0.1, 120., cubeDimensions, parameters,ICs)\n",
+        "fig1=mr.animated_cube_flat_shading(Sim_Q,'Fully Actuated Cube(Pivoted from center)')"
+      ],
+      "metadata": {
+        "id": "aPgT_7-iXV8F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#Task#4"
