--- a/mechanics/assignments/Group_Kalman_CRS_ControlSystems_Lab.ipynb
+++ b/mechanics/assignments/Group_Kalman_CRS_ControlSystems_Lab.ipynb
@@ -1590,6 +1590,114 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Here are few example our own implementations of this controller.\n",
+        "\n",
+        "* https://youtu.be/6E9WDQNVSYA\n",
+        "* https://youtu.be/uUKxXImRMOA\n",
+        "* https://youtu.be/zq05N8m_9SA\n",
+        "* https://youtu.be/J5dThZGZN2g\n",
+        "* https://youtu.be/J5MMp6Be3tU\n",
+        "* https://youtu.be/6ZQgE1FI6Wc"
+      ],
+      "metadata": {
+        "id": "sOQeFbGefLCY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def referenceConfig(qq,refParameters,t):\n",
+        "  II=refParameters;\n",
+        "  dotOmegart=np.array([0,.01,0]);\n",
+        "  dotPir=II@dotOmegart;\n",
+        "  Omegart=np.array([0,0,0])+dotOmegart*t;\n",
+        "  Pir=II@Omegart;\n",
+        "  thetaOmegart=linalg.norm(Omegart)*t+0*np.pi;\n",
+        "  nOmegart=Omegart/(0.000001+linalg.norm(Omegart));\n",
+        "  qOmegart=np.concatenate(([np.cos(thetaOmegart/2)],np.sin(thetaOmegart/2)*nOmegart));\n",
+        "  Rr=np.array([[1,0,0],[0,1,0],[0,0,1]]) #should be stabalized position for the R\n",
+        "  return [Rr,Pir,dotPir]\n",
+        "\n",
+        "def controller(qq,parameters,t,X,taue,fe):\n",
+        "  #Fully Actuated PD Controller\n",
+        "  II=parameters['II'];\n",
+        "  R=X[0][0]; omega=X[1]; piI=X[3];\n",
+        "  [Rr,Pir,dotPir]=referenceConfig(qq,II,t);\n",
+        "  pir=Rr@Pir;\n",
+        "  omegar=Rr@linalg.inv(II)@Pir;\n",
+        "  Re=Rr@R.T;\n",
+        "  pie=R @ II @ Rr.T @ (omegar-Re@omega);\n",
+        "  K=np.array([[1,0,0],[0,2,0],[0,0,3]]);\n",
+        "  eRhat=0.5*(Re@K-K@Re.T);\n",
+        "  eR=np.array([-eRhat[1,2],eRhat[0,2],-eRhat[0,1]]);\n",
+        "  tauu=(R@dotPir+qq.hatMatrix(omega)@pir)-0.*taue+(4*eR+10*pie+2.*piI)\n",
+        "  fu=-fe+np.array([0,0,0]);\n",
+        "  return [tauu,fu,eR,pie]\n",
+        "\n",
+        "def controller_dynamics(qq, t,X,taue,fe,parameters):\n",
+        "  Xc=X[3];\n",
+        "  Uc=controller(qq,parameters,t,X,taue,fe);\n",
+        "  eR=Uc[2];\n",
+        "  dXc=eR;\n",
+        "  #print(eR)\n",
+        "  return dXc"
+      ],
+      "metadata": {
+        "id": "9ca9jSJRhkcn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PendulumDimensions={'l':0.5,'w':0.5,'h':10,'xp':0.25,'yp':0.25,'zp':0,};\n",
+        "parameters={'CM':np.array([PendulumDimensions['l']/2-PendulumDimensions['xp'],PendulumDimensions['w']/2-PendulumDimensions['yp'],PendulumDimensions['h']/2-PendulumDimensions['zp']]), 'g':1, 'M':1, 'II':np.array([[1.,0.,0.],[0.,1.,0.],[0.,0.,1.]])};\n",
+        "ICR = find_R(np.pi/30,np.pi/30,0)\n",
+        "ICOmega=np.array([0.,0.,0.]); ICo=np.array([0.,0.,0.]); ICp=np.array([0.,0.,0.]);\n",
+        "ICXC=np.array([0,0,0]);\n",
+        "ICs=[[ICR,ICo],ICOmega,ICp,ICXC]"
+      ],
+      "metadata": {
+        "id": "Z5L4yCg6huGS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Pendulum=mr.simulating_a_cube(0.1, 120., PendulumDimensions, parameters,ICs)\n",
+        "\n",
+        "\n",
+        "fig1=mr.animated_cube_flat_shading(Pendulum,'Fully Actuated Cuboid Pivoted at edge')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        },
+        "id": "4uwkEBZzhx6T",
+        "outputId": "092c6b51-18c8-4a56-d18c-9348b3dd4fa7"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-ee33b02edc4a>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mPendulum\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimulating_a_cube\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m120.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPendulumDimensions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mICs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mfig1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0manimated_cube_flat_shading\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPendulum\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Fully Actuated Cuboid Pivoted at edge'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'mr' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Derive a specialization of the controller develoed in Task#3 for the problem of stabilzing an inverted pendulum on a cart."
       ],
       "metadata": {
